force-app/main/default/objects/GBase_Settings__c/GBase_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>GBase API Configuration Settings</description>
    <label>GBase Settings</label>
</CustomObject>