force-app/main/default/objects/GBase_Settings__c/fields/API_Key__c.field-meta.xml
<CustomField>
    <fullName>API_Key__c</fullName>
    <description>GBase API Key for authentication</description>
    <label>API Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>