force-app/main/default/objects/GBase_Settings__c/fields/Callback_URL__c.field-meta.xml
<CustomField>
    <fullName>Callback_URL__c</fullName>
    <description>Webhook callback URL for GBase to send notifications</description>
    <label>Callback URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>