force-app/main/default/objects/GBase_Settings__c/fields/Enable_Debug_Logging__c.field-meta.xml
<CustomField>
    <fullName>Enable_Debug_Logging__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable debug logging for troubleshooting</description>
    <label>Enable Debug Logging</label>
    <type>Checkbox</type>
</CustomField>